fix(android): Fix codegen package and class name mismatches
Fixes the Android new architecture build failure caused by incorrect
codegen configuration that generated NativePolygenSpec in
com.callstack.polygen while Kotlin code expected NativeWasmSpec in
com.wasm package.

Changes:
- Align build.gradle codegen config with package.json:
  - libraryName="RNPolygenSpec" (matches codegenConfig.name)
  - codegenJavaPackageName="com.callstack.polygen"
- Update Android namespace from com.wasm to com.callstack.polygen
- Rename Wasm* Kotlin files to Polygen* with correct package
- Add PolygenModule implementing all NativePolygenSpec abstract methods
  (with stub implementations that throw UnsupportedOperationException)
- Add @ReactMethod annotations to oldarch PolygenSpec for old architecture
  compatibility
- Remove outdated C++ native build config (cpp-adapter.cpp, CMakeLists)
- Update react-native.config.js with correct package import path
- Add PLAN.md documenting steps for full C++ implementation including:
  - CMake setup with OnLoad.cpp
  - SoLoader.loadLibrary for JNI_OnLoad trigger
  - C++ TurboModule registration

Note: The Android module now compiles successfully but the actual WASM
runtime implementation is not yet wired up. Methods will throw
UnsupportedOperationException at runtime until the C++ implementation
is properly integrated via JNI.

Fixes #132

--- a/packages/polygen/android/CMakeLists.txt
+++ b/packages/polygen/android/CMakeLists.txt
@@ -1,15 +1,15 @@
 cmake_minimum_required(VERSION 3.4.1)
-project(Wasm)
+project(Polygen)
 
-set (CMAKE_VERBOSE_MAKEFILE ON)
-set (CMAKE_CXX_STANDARD 14)
+# Note: The full C++ implementation for Android is not yet complete.
+# This CMake file is a placeholder. The actual WASM runtime will be
+# integrated via JNI in a future update. Currently the Android module
+# provides stub implementations that throw UnsupportedOperationException.
+#
+# See: https://github.com/callstackincubator/polygen/issues/132
 
-add_library(react-native-wasm            SHARED
-            ../cpp/react-native-wasm.cpp
-            cpp-adapter.cpp
-)
+set(CMAKE_VERBOSE_MAKEFILE ON)
+set(CMAKE_CXX_STANDARD 17)
 
-# Specifies a path to native header files.
-include_directories(
-            ../cpp
-)
+# Placeholder - no native sources to compile yet
+# The ReactNativePolygen C++ code needs to be properly integrated for Android
