--- a/packages/polygen/android/gradle.properties
+++ b/packages/polygen/android/gradle.properties
@@ -1,5 +1,5 @@
-Wasm_kotlinVersion=1.7.0
-Wasm_minSdkVersion=21
-Wasm_targetSdkVersion=31
-Wasm_compileSdkVersion=31
-Wasm_ndkversion=21.4.7075529
+Polygen_kotlinVersion=1.7.0
+Polygen_minSdkVersion=21
+Polygen_targetSdkVersion=31
+Polygen_compileSdkVersion=31
+Polygen_ndkversion=21.4.7075529
