feat(android): Wire up C++ TurboModule implementation
- Rewrite CMakeLists.txt with proper React Native prefab integration
- Enable externalNativeBuild and prefab in build.gradle
- Add OnLoad.cpp for JNI_OnLoad registration
- Add ModuleBagStub.cpp for runtime-only usage
- Update PolygenPackage.kt with SoLoader and isCxxModule=true
- Add cmakeListsPath to react-native.config.js
- Fix missing #include <string> in w2c.h
- Use GLOB_RECURSE to include utils/checksum.cpp
- Link ReactAndroid::folly_runtime for fmt support

--- a/packages/polygen/android/CMakeLists.txt
+++ b/packages/polygen/android/CMakeLists.txt
@@ -1,15 +1,87 @@
-cmake_minimum_required(VERSION 3.4.1)
+cmake_minimum_required(VERSION 3.13)
 project(Polygen)
 
-# Note: The full C++ implementation for Android is not yet complete.
-# This CMake file is a placeholder. The actual WASM runtime will be
-# integrated via JNI in a future update. Currently the Android module
-# provides stub implementations that throw UnsupportedOperationException.
-#
-# See: https://github.com/callstackincubator/polygen/issues/132
-
 set(CMAKE_VERBOSE_MAKEFILE ON)
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 
-# Placeholder - no native sources to compile yet
-# The ReactNativePolygen C++ code needs to be properly integrated for Android
+# Find react-native directory
+# When building as part of an app, this will find the react-native installation
+if(NOT DEFINED REACT_ANDROID_DIR)
+  # Search upward for node_modules/react-native
+  set(SEARCH_DIR ${CMAKE_SOURCE_DIR})
+  while(NOT EXISTS "${SEARCH_DIR}/node_modules/react-native/ReactAndroid")
+    get_filename_component(PARENT_DIR ${SEARCH_DIR} DIRECTORY)
+    if(PARENT_DIR STREQUAL SEARCH_DIR)
+      message(FATAL_ERROR "Could not find react-native in node_modules")
+    endif()
+    set(SEARCH_DIR ${PARENT_DIR})
+  endwhile()
+  set(REACT_ANDROID_DIR "${SEARCH_DIR}/node_modules/react-native/ReactAndroid")
+endif()
+
+# Include folly flags for proper compilation
+include(${REACT_ANDROID_DIR}/cmake-utils/folly-flags.cmake)
+
+# Find React Native packages via prefab
+find_package(ReactAndroid REQUIRED CONFIG)
+find_package(fbjni REQUIRED CONFIG)
+
+# Collect all C++ sources from ReactNativePolygen (including subdirectories)
+file(GLOB_RECURSE POLYGEN_CPP_SOURCES
+  "../cpp/ReactNativePolygen/*.cpp"
+)
+
+# Collect all C sources from wasm-rt runtime
+file(GLOB WASM_RT_C_SOURCES
+  "../cpp/wasm-rt/*.c"
+)
+
+# JNI registration, stubs, and codegen-generated sources
+set(JNI_SOURCES
+  "src/main/jni/OnLoad.cpp"
+  "src/main/jni/ModuleBagStub.cpp"
+  "${CMAKE_SOURCE_DIR}/build/generated/source/codegen/jni/react/renderer/components/RNPolygenSpec/RNPolygenSpecJSI-generated.cpp"
+)
+
+# Create shared library
+add_library(polygen SHARED
+  ${POLYGEN_CPP_SOURCES}
+  ${WASM_RT_C_SOURCES}
+  ${JNI_SOURCES}
+)
+
+# Include directories for our sources
+target_include_directories(polygen PRIVATE
+  ../cpp
+  ../cpp/ReactNativePolygen
+  ../cpp/wasm-rt
+)
+
+# Include directories for codegen-generated headers
+# These are set by the React Native Gradle plugin
+# The path is relative to the library's build directory
+target_include_directories(polygen PRIVATE
+  ${CMAKE_SOURCE_DIR}/build/generated/source/codegen/jni
+  ${CMAKE_SOURCE_DIR}/build/generated/source/codegen/jni/react/renderer/components/RNPolygenSpec
+)
+
+# Link against React Native and fbjni
+target_link_libraries(polygen
+  ReactAndroid::jsi
+  ReactAndroid::react_nativemodule_core
+  ReactAndroid::turbomodulejsijni
+  ReactAndroid::reactnativejni
+  ReactAndroid::folly_runtime
+  fbjni::fbjni
+)
+
+# Compiler flags
+target_compile_options(polygen PRIVATE
+  -Wall
+  -fexceptions
+  -frtti
+  -O2
+  -fstack-protector-all
+  -DLOG_TAG=\"Polygen\"
+  ${folly_FLAGS}
+)
