fix(android): Fix native library packaging and build config
- Move react{} DSL to subprojects afterEvaluate (plugin not at root)
- Add packagingOptions to exclude React Native .so files from AAR
- Re-enable newArchEnabled for TurboModule support

--- a/apps/example/android/build.gradle
+++ b/apps/example/android/build.gradle
@@ -43,6 +43,13 @@ allprojects {
 }
 
 
-react {
-    bundleCommand = "webpack-bundle"
+// Configure react-native in app subproject after plugin is applied
+subprojects {
+    afterEvaluate { project ->
+        if (project.plugins.hasPlugin("com.facebook.react")) {
+            project.react {
+                bundleCommand = "webpack-bundle"
+            }
+        }
+    }
 }
