feat(android): Add CMake integration for polygen-generated code
Implements the Android equivalent of iOS's ReactNativeWebAssemblyHost.podspec
mechanism for linking polygen-generated native code.

Changes:
- Add android-cmake.ts plugin to polygen-codegen that generates
  CMakeLists.txt in .polygen-out/host/ during code generation
- Modify polygen library's CMakeLists.txt to detect and include
  generated code when available
- Pass POLYGEN_APP_ROOT from Gradle to CMake to support monorepo setups
- Conditionally exclude ModuleBagStub.cpp when generated loader.cpp
  provides getModuleBag()

The generated code is now being compiled and linked, but there's a
pre-existing wasm-rt API mismatch that needs to be fixed separately:
wasm2c generates code calling wasm_rt_allocate_memory with 5 args,
but bundled wasm-rt expects 4 args.

--- a/packages/polygen/android/CMakeLists.txt
+++ b/packages/polygen/android/CMakeLists.txt
@@ -17,6 +17,7 @@ if(NOT DEFINED REACT_ANDROID_DIR)
     set(SEARCH_DIR ${PARENT_DIR})
   endwhile()
   set(REACT_ANDROID_DIR "${SEARCH_DIR}/node_modules/react-native/ReactAndroid")
+  set(APP_NODE_MODULES_DIR "${SEARCH_DIR}/node_modules")
 endif()
 
 # Include folly flags for proper compilation
@@ -26,21 +27,56 @@ include(${REACT_ANDROID_DIR}/cmake-utils/folly-flags.cmake)
 find_package(ReactAndroid REQUIRED CONFIG)
 find_package(fbjni REQUIRED CONFIG)
 
+# Check for polygen-generated code in .polygen-out/host/
+# This is the Android equivalent of iOS's ReactNativeWebAssemblyHost.podspec auto-linking
+set(POLYGEN_HAS_GENERATED_CODE OFF)
+set(POLYGEN_GENERATED_DIR "")
+
+# POLYGEN_APP_ROOT is passed from Gradle with the app's project directory
+# This allows us to find the app's node_modules/.polygen-out/host/ even in monorepo setups
+if(DEFINED POLYGEN_APP_ROOT AND EXISTS "${POLYGEN_APP_ROOT}/node_modules/.polygen-out/host/CMakeLists.txt")
+  set(POLYGEN_GENERATED_DIR "${POLYGEN_APP_ROOT}/node_modules/.polygen-out/host")
+  set(POLYGEN_HAS_GENERATED_CODE ON)
+elseif(EXISTS "${APP_NODE_MODULES_DIR}/.polygen-out/host/CMakeLists.txt")
+  # Fallback: try the node_modules found during react-native search
+  set(POLYGEN_GENERATED_DIR "${APP_NODE_MODULES_DIR}/.polygen-out/host")
+  set(POLYGEN_HAS_GENERATED_CODE ON)
+endif()
+
+if(POLYGEN_HAS_GENERATED_CODE)
+  message(STATUS "Found polygen-generated code at ${POLYGEN_GENERATED_DIR}")
+  # Set include directory for generated code to find polygen headers
+  set(POLYGEN_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../cpp")
+  add_subdirectory(${POLYGEN_GENERATED_DIR} ${CMAKE_BINARY_DIR}/polygen-generated)
+else()
+  message(STATUS "No polygen-generated code found, using stub (run 'polygen generate' in your app)")
+endif()
+
 # Collect all C++ sources from ReactNativePolygen (including subdirectories)
 file(GLOB_RECURSE POLYGEN_CPP_SOURCES
   "../cpp/ReactNativePolygen/*.cpp"
 )
 
-# Collect all C sources from wasm-rt runtime
-file(GLOB WASM_RT_C_SOURCES
-  "../cpp/wasm-rt/*.c"
-)
+# Collect all C sources from wasm-rt runtime (only if not using generated code)
+# Generated code includes its own wasm-rt copy
+if(NOT POLYGEN_HAS_GENERATED_CODE)
+  file(GLOB WASM_RT_C_SOURCES
+    "../cpp/wasm-rt/*.c"
+  )
+else()
+  set(WASM_RT_C_SOURCES "")
+endif()
 
-# JNI registration and stubs
+# JNI registration sources
 set(JNI_SOURCES
   "src/main/jni/OnLoad.cpp"
-  "src/main/jni/ModuleBagStub.cpp"
 )
+
+# Only include stub if we don't have generated code
+# Generated code provides getModuleBag() via loader.cpp
+if(NOT POLYGEN_HAS_GENERATED_CODE)
+  list(APPEND JNI_SOURCES "src/main/jni/ModuleBagStub.cpp")
+endif()
 
 # Codegen-generated sources (only available when new architecture is enabled and codegen has run)
 set(CODEGEN_JSI_SOURCE "${CMAKE_SOURCE_DIR}/build/generated/source/codegen/jni/react/renderer/components/RNPolygenSpec/RNPolygenSpecJSI-generated.cpp")
@@ -57,12 +93,24 @@ add_library(polygen SHARED
   ${JNI_SOURCES}
 )
 
+# Link generated code object library if available
+if(POLYGEN_HAS_GENERATED_CODE)
+  target_sources(polygen PRIVATE $<TARGET_OBJECTS:polygen_generated>)
+endif()
+
 # Include directories for our sources
 target_include_directories(polygen PRIVATE
   ../cpp
   ../cpp/ReactNativePolygen
   ../cpp/wasm-rt
 )
+
+# Include generated code directory if available
+if(POLYGEN_HAS_GENERATED_CODE)
+  target_include_directories(polygen PRIVATE
+    ${POLYGEN_GENERATED_DIR}
+  )
+endif()
 
 # Include directories for codegen-generated headers (only if they exist)
 set(CODEGEN_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/build/generated/source/codegen/jni")
