--- a/apps/example/android/gradle.properties
+++ b/apps/example/android/gradle.properties
@@ -41,7 +41,7 @@ reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
 # are providing them.
 # Note that this is incompatible with web debugging.
 newArchEnabled=true
-#bridgelessEnabled=true
+bridgelessEnabled=true
 
 # Uncomment the line below to build React Native from source.
 #react.buildFromSource=true
