--- a/apps/example/android/settings.gradle
+++ b/apps/example/android/settings.gradle
@@ -1,21 +1,39 @@
 pluginManagement {
-    repositories {
-        gradlePluginPortal()
-        mavenCentral()
-        google()
-    }
+  def reactNativeGradlePlugin = new File(
+    providers.exec {
+      workingDir(rootDir)
+      commandLine("node", "--print", "require.resolve('@react-native/gradle-plugin/package.json', { paths: [require.resolve('react-native/package.json')] })")
+    }.standardOutput.asText.get().trim()
+  ).getParentFile().absolutePath
+  includeBuild(reactNativeGradlePlugin)
+  
+  def expoPluginsPath = new File(
+    providers.exec {
+      workingDir(rootDir)
+      commandLine("node", "--print", "require.resolve('expo-modules-autolinking/package.json', { paths: [require.resolve('expo/package.json')] })")
+    }.standardOutput.asText.get().trim(),
+    "../android/expo-gradle-plugin"
+  ).absolutePath
+  includeBuild(expoPluginsPath)
 }
 
-rootProject.name = "WasmExample"
+plugins {
+  id("com.facebook.react.settings")
+  id("expo-autolinking-settings")
+}
 
-apply(from: {
-    def searchDir = rootDir.toPath()
-    do {
-        def p = searchDir.resolve("node_modules/react-native-test-app/test-app.gradle")
-        if (p.toFile().exists()) {
-            return p.toRealPath().toString()
-        }
-    } while (searchDir = searchDir.getParent())
-    throw new GradleException("Could not find `react-native-test-app`");
-}())
-applyTestAppSettings(settings)
+extensions.configure(com.facebook.react.ReactSettingsExtension) { ex ->
+  if (System.getenv('EXPO_USE_COMMUNITY_AUTOLINKING') == '1') {
+    ex.autolinkLibrariesFromCommand()
+  } else {
+    ex.autolinkLibrariesFromCommand(expoAutolinking.rnConfigCommand)
+  }
+}
+expoAutolinking.useExpoModules()
+
+rootProject.name = 'example'
+
+expoAutolinking.useExpoVersionCatalog()
+
+include ':app'
+includeBuild(expoAutolinking.reactNativeGradlePlugin)
