--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -1,32 +1,26 @@
 {
   "name": "polygen-example",
-  "description": "Example app for React Native",
-  "license": "MIT",
-  "homepage": "https://github.com/callstackincubator/polygen",
-  "version": "0.0.1",
-  "author": "Robert Pasiński <robert.pasinski@callstack.com>",
+  "version": "1.0.0",
   "private": true,
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/callstackincubator/polygen.git"
-  },
+  "main": "index.js",
   "scripts": {
-    "dev": "true",
-    "android": "react-native run-android",
-    "build:android": "npm run mkdist && react-native bundle --entry-file index.js --platform android --dev true --bundle-output dist/main.android.jsbundle --assets-dest dist && react-native build-android --extra-params \"--no-daemon --console=plain -PreactNativeArchitectures=arm64-v8a\"",
-    "build:ios": "npm run mkdist && react-native bundle --entry-file index.js --platform ios --dev true --bundle-output dist/main.ios.jsbundle --assets-dest dist && react-native build-ios --scheme ReactNativePolygen --mode Debug --extra-params \"-sdk iphonesimulator CC=clang CPLUSPLUS=clang++ LD=clang LDPLUSPLUS=clang++ GCC_OPTIMIZATION_LEVEL=0 GCC_PRECOMPILE_PREFIX_HEADER=YES ASSETCATALOG_COMPILER_OPTIMIZATION=time DEBUG_INFORMATION_FORMAT=dwarf COMPILER_INDEX_STORE_ENABLE=NO\"",
-    "ios": "react-native run-ios",
-    "mkdist": "node -e \"require('node:fs').mkdirSync('dist', { recursive: true, mode: 0o755 })\"",
-    "start": "react-native start"
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "prebuild": "expo prebuild",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@bacons/text-decoder": "^0.0.0",
-    "@callstack/polygen-config": "workspace:^",
+    "@callstack/polygen": "workspace:^",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/native-stack": "^7.1.14",
     "@react-navigation/stack": "^7.0.18",
-    "react": "18.3.1",
-    "react-native": "0.75.4",
+    "expo": "~54.0.30",
+    "expo-status-bar": "~3.0.9",
+    "react": "19.1.0",
+    "react-native": "0.81.5",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.3.0",
@@ -34,17 +28,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@callstack/polygen": "workspace:^",
     "@callstack/polygen-cli": "workspace:^",
+    "@callstack/polygen-config": "workspace:^",
     "@callstack/polygen-metro-config": "workspace:^",
-    "@react-native/babel-preset": "0.75.4",
-    "@react-native/metro-config": "0.75.4",
-    "@react-native/typescript-config": "0.75.4",
-    "@rnx-kit/metro-config": "^2.0.0",
-    "react-native-builder-bob": "^0.30.2",
-    "react-native-test-app": "^3.10.22"
+    "@types/react": "~18.2.45",
+    "typescript": "~5.3.3"
   },
   "engines": {
     "node": ">=18"
