--- a/packages/polygen/package.json
+++ b/packages/polygen/package.json
@@ -76,8 +76,8 @@
     "@callstack/polygen-typescript-config": "workspace:^",
     "@react-native-community/cli": "^15.1.3",
     "@types/react": "^18.2.44",
-    "react": "17.0.2",
-    "react-native": "0.75.4",
+    "react": "18.2.0",
+    "react-native": "0.76.0",
     "react-native-builder-bob": "^0.30.2",
     "release-it": "^15.0.0",
     "turbo": "^1.10.7",
@@ -87,8 +87,8 @@
     "@types/react": "^18.2.44"
   },
   "peerDependencies": {
-    "react": "*",
-    "react-native": "*"
+    "react": ">=18.0.0",
+    "react-native": ">=0.76.0"
   },
   "codegenConfig": {
     "name": "RNPolygenSpec",
