--- a/apps/example/ios/Podfile
+++ b/apps/example/ios/Podfile
@@ -23,6 +23,9 @@ prepare_react_native_project!
 target 'example' do
   use_expo_modules!
 
+  # Polygen-generated host code (provides getModuleBag for WASM modules)
+  pod 'ReactNativeWebAssemblyHost', :path => '../node_modules/.polygen-out/host'
+
   if ENV['EXPO_USE_COMMUNITY_AUTOLINKING'] == '1'
     config_command = ['node', '-e', "process.argv=['', '', 'config'];require('@react-native-community/cli').run()"];
   else
