fix(ios): add codegen module provider mapping

--- a/packages/polygen/package.json
+++ b/packages/polygen/package.json
@@ -94,6 +94,11 @@
     "name": "RNPolygenSpec",
     "type": "modules",
     "jsSrcsDir": "src",
+    "ios": {
+      "modulesProvider": {
+        "Polygen": "PolygenModule"
+      }
+    },
     "android": {
       "javaPackageName": "com.callstack.polygen"
     }
