--- a/packages/polygen-cli/package.json
+++ b/packages/polygen-cli/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@callstack/polygen-cli",
-  "version": "0.2.1",
-  "description": "The Command Line Interface for @callstack/polygen",
+  "name": "@0xbigboss/polygen-cli",
+  "version": "0.1.1",
+  "description": "The Command Line Interface for @0xbigboss/polygen",
   "main": "./dist/index.js",
   "bin": "bin/polygen.js",
   "type": "module",
@@ -19,8 +19,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@callstack/polygen-codegen": "0.2.1",
-    "@callstack/polygen-project": "0.2.1",
+    "@0xbigboss/polygen-codegen": "0.1.1",
+    "@0xbigboss/polygen-project": "0.1.1",
     "chalk": "^5.3.0",
     "commander": "^12.1.0",
     "consola": "^3.4.0",
@@ -30,7 +30,7 @@
     "ora": "^8.1.0"
   },
   "devDependencies": {
-    "@callstack/polygen-typescript-config": "workspace:^",
+    "@0xbigboss/polygen-typescript-config": "workspace:^",
     "typescript": "^5.7.2"
   }
 }
