--- a/packages/polygen/package.json
+++ b/packages/polygen/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@callstack/polygen",
-  "version": "0.2.1",
+  "name": "@0xbigboss/polygen",
+  "version": "0.1.1",
   "description": "React Native Module for running WebAssembly modules, with native performance.",
   "source": "./src/index.ts",
   "main": "./dist/index.js",
@@ -69,11 +69,11 @@
     "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
-    "@callstack/polygen-cli": "0.2.1",
+    "@0xbigboss/polygen-cli": "0.1.1",
     "del-cli": "^5.1.0"
   },
   "devDependencies": {
-    "@callstack/polygen-typescript-config": "workspace:^",
+    "@0xbigboss/polygen-typescript-config": "workspace:^",
     "@react-native-community/cli": "^15.1.3",
     "@types/react": "^18.2.44",
     "react": "17.0.2",
