fix(android): support React Native 0.76+ New Architecture
- Gate CMake externalNativeBuild behind isNewArchitectureEnabled()
- Link against merged prefab targets (ReactAndroid::jsi, ReactAndroid::reactnative, fbjni::fbjni)
- Add -DANDROID_STL=c++_shared to match RN's C++ runtime
- Enable fmt header-only mode with -DFMT_HEADER_ONLY=1
- Fix example app react{} DSL to apply only when React plugin is active

--- a/apps/example/android/build.gradle
+++ b/apps/example/android/build.gradle
@@ -43,6 +43,11 @@ allprojects {
 }
 
 
-react {
-    bundleCommand = "webpack-bundle"
+// Configure React plugin when applied in subprojects (e.g., :app module)
+subprojects {
+    plugins.withId("com.facebook.react") {
+        react {
+            bundleCommand = "webpack-bundle"
+        }
+    }
 }
