--- a/packages/polygen/android/build.gradle
+++ b/packages/polygen/android/build.gradle
@@ -66,17 +66,24 @@ android {
     targetSdkVersion getExtOrIntegerDefault("targetSdkVersion")
     buildConfigField "boolean", "IS_NEW_ARCHITECTURE_ENABLED", isNewArchitectureEnabled().toString()
 
-    externalNativeBuild {
-      cmake {
-        cppFlags "-O2 -frtti -fexceptions -Wall -fstack-protector-all"
-        abiFilters (*reactNativeArchitectures())
+    if (isNewArchitectureEnabled()) {
+      externalNativeBuild {
+        cmake {
+          cppFlags "-O2 -frtti -fexceptions -Wall -fstack-protector-all"
+          abiFilters (*reactNativeArchitectures())
+
+          def appRoot = rootProject.projectDir.parentFile.absolutePath
+          arguments "-DANDROID_STL=c++_shared", "-DPOLYGEN_APP_ROOT=${appRoot}"
+        }
       }
     }
   }
 
-  externalNativeBuild {
-    cmake {
-      path "CMakeLists.txt"
+  if (isNewArchitectureEnabled()) {
+    externalNativeBuild {
+      cmake {
+        path "CMakeLists.txt"
+      }
     }
   }
 
